# taulukko

./: .gitignore  Makefile  README.md  SECURITY.md  SUPPORT.md  baseline-bandit.json  indirect-package-names.yml  mkdocs.yml  pyproject.toml  requirements.txt  sbom.json  sbom.json.sha256  setup.cfg  taulukko.ABOUT
docs/: SUMMARY.md  book.toml  changes.md  index.md  install.md  test-coverage.md  usage.md
etc/: baseline-bandit.json  coverage-totals.json  git-stats.json  indirect-package-names.yml  mkdocs.yml  monthly-downloads.json  packaging-facts.json
etc/sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
taulukko/: __init__.py  __main__.py  cli.py  taulukko.py
test/: requirements-dev.txt  test_cli.py  test_taulukko.py
tests/: test_cli.py  test_taulukko.py
tests/fixtures/basic/: 2x2-table-w-th.html
